# aria2-bin

./: .gitignore  README.md  _build_backend.py  pyproject.toml
.github/workflows/: build-wheels.yml
docker/: linux-manylinux.Dockerfile  linux-musl.Dockerfile  windows-mingw.Dockerfile
scripts/: build_aria2.py  build_linux_manylinux.py  build_linux_musl.py  build_macos_deps.py  build_wheel.py  build_windows_mingw.py  build_windows_msys2.py  build_windows_static.py  install_static_aria2.py  verify_static.py
src/aria2_bin/: _run.py
